# NAGUS

./: .editorconfig  .gitignore  .readthedocs.yaml  README.md  nagus_config.defaults.ini  pyproject.toml  setup.cfg  static_ages.ini
docs/: architecture.rst  conf.py  encryption_keys.rst  index.rst  intro.rst  nagus.rst  product_id.rst  protocol.rst  requirements_docs.txt  server_config.rst
docs/nagus/: about.rst  changelog.rst
docs/uru/: architecture.rst  auth_server.rst  encryption_keys.rst  game_server.rst  gatekeeper_server.rst  index.rst  names.rst  product_id.rst  protocol.rst  sdl.rst  server_config.rst  vault.rst
docs/uru/game_server/: net_messages.rst  plasma_messages.rst
src/nagus/: __init__.py  __main__.py  auth_server.py  base.py  client_config_gen.py  configuration.py  console.py  crash_lines.py  crypto.py  game_server.py  gatekeeper_server.py  pl_messages.py  sdl.py  state.py  status_server.py  structs.py
tests/: __init__.py  test_crypto.py  test_sdl.py  test_structs.py
