[build-system]
requires = [
	"setuptools >= 46.4.0",
	"wheel >= 0.32.0",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = "src/**/*.py"
python_version = "3.7"

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true

no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
