[metadata]
name = nagus
version = attr: nagus.__version__
url = https://github.com/dgelessus/NAGUS
author = dgelessus
classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: System Administrators
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)
	Topic :: Games/Entertainment :: Role-Playing
license = AGPL-3.0-or-later
license_files =
	COPYING.txt
description = An Uru Live server that is not very good
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
	cwe
	live
	moul
	moula
	mystonline
	plasma
	uru
	urulive

[options]
# mypy can only find type hints in the package if zip_safe is set to False,
# see https://mypy.readthedocs.io/en/latest/installed_packages.html#making-pep-561-compatible-packages
zip_safe = False
python_requires = >=3.7
packages = find:
package_dir =
	= src

[options.package_data]
nagus =
	py.typed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	nagus = nagus.__main__:main
